fixed styling issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -445,9 +445,25 @@ h6 {
   margin-bottom: 1rem;
 }
 
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
 .resources-container input {
   width: fit-content;
-  height: fit-content;
+  height: 3rem;
   background-color: #f6f6f6;
   outline: none;
   border: 1px solid #503076;
@@ -458,13 +474,22 @@ h6 {
 }
 
 .resources-container form button {
-  height: fit-content;
-  width: fit-content;
+  height: 3rem;
+  width: 3rem;
   padding: 0.5rem;
   color: #503076;
-  font-size: clamp(1.5rem, 1.7vw, 2rem) !important;
   border: 1px solid #503076;
   border-radius: 0.25rem;
+  background-color: #dadada;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-icon {
+  height: 2.2rem;
+  width: 2.2rem;
 }
 
 .hide {
